2011-12-20  Simson Garfinkel  <simsong@arlington-8-30-79-4.ncr.vt.edu>

	* tests/testfiles/Makefile.am (testfiles.zip): removed $FILES from release; now testfiles.zip is built as part of the release, and the FILES are in it.

2011-12-17  Simson Garfinkel  <simsong@imac3.home>

	* src/files.cpp (state::find_hash_in_line): removed ILOOK3 intentional fall through. Now we explicitly do it.

	* src/display.cpp (display::portable_gmtime): We needed a gmtime()
	in multiple locaitons that was portable and threadsafe, so we
	created this from the code that was previously in
	md5deep_display_hash.
	(file_data_hasher_t::compute_dfxml): hashdigest indent set to 0 from 2 if piecewise_size is 0
	(display::dfxml_write): ctime, mtime, and atime now put in DFXML output.

	* src/dig.cpp (state::file_type): added support for mtime and atime.

	* src/main.h: changed fdht->timestamp to fdht->ctime.

2011-12-17  Simson Garfinkel  <simsong@arlington-8-30-79-4.ncr.vt.edu>

	* src/files.cpp (state::md5deep_load_match_file): replaced fprintf(stderr) with a cerr output.

	* src/hash.cpp (file_data_hasher_t::hash): removed assert(0) for invalid setting of iomode; now displays what the invalid setting is.

2011-12-16 Jesse Kornblum <research@jessekornblum.com>

	* tests/tests.sh: added test for BSD style hashes, iLook hashes

2011-12-04  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/display.cpp (dfxml_write): added filesize to DFXML output

2011-11-29  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/main.h (d): default I/O mode changed from memory-mapped to buffered (the same as the 3.x release.) Memory-mapped should be faster, but for some reason it isn't. Also it makes the memory usage appear quite large (it isn't, but the top and ps commands report mapped memory.)

2011-11-27 Jesse Kornblum <research@jessekornblum.com>:

	* src/main.cpp (hashdeep_process_command_line): Fixed getopt command so that -c mode takes an argument, but -C does not. The former caused a crash.